feat: add Role module
