# controller/openapi.yaml
@@ -9,7 +9,6 @@ paths:
       parameters:
         - name: username
           in: query
-          required: false
           schema:
             type: string
         - name: name
@@ -130,6 +129,128 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+                
+  /api/v1/roles:
+    get:
+      parameters:
+        - name: name
+          in: query
+          style: form
+          schema:
+            type: string
+        - name: status
+          in: query
+          style: form
+          schema:
+            type: string
+        - name: current
+          in: query
+          schema:
+            type: integer
+          required: true
+        - name: pageSize
+          in: query
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Role'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    post:
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Role'
+      responses:
+        '200':
+          description: response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Role'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /api/v1/roles/{id}:
+    get:
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Role'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    delete:
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: delete
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+    put:
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Role'
+      responses:
+        '200':
+          description: delete
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   schemas:
@@ -196,6 +317,53 @@ components:
           format: int32
         role_name:
           type: string
+        created:
+          type: string
+        updated:
+          type: string
+      type: object
+      
+    Role:
+      properties:
+        name:
+          type: string
+          maxLength: 128
+        code:
+          type: string
+          maxLength: 32
+        description:
+          type: string
+        sequence:
+          type: integer
+        status:
+          type: string
+          enum:
+            - enabled
+            - disabled
+        created:
+          type: string
+        updated:
+          type: string
+        menu:
+          items:
+            $ref: '#/components/schemas/RoleMenu'
+          type: array
+      required:
+        - name
+        - code
+      type: object
+      
+    RoleMenu:
+      properties:
+        id:
+          type: integer
+          format: int32
+        role_id:
+          type: integer
+          format: int32
+        menu_id:
+          type: integer
+          format: int32
         created:
           type: string
         updated:
